--- a/index.html
+++ b/index.html
@@ -332,11 +332,14 @@
 <!-- 
         - #Price
       -->
-
-
+      <section class="Price">
+      <h1 class="h1 hero-title">PRICING PLAN
+      </h1>
+      <h1 class="h1 hero-title">The Best Solutions for Our Clients
+      </h1>
       <div class="wrapper">
         <div class="pricing-table gprice-single">
-            <div class="head">
+          <div class="head">
                  <h4 class="title">Basic</h4> 
             </div>
             <div class="content">
@@ -929,7 +932,7 @@
     <div class="container">
 
       <p class="copyright">
-        &copy; 2025 All Rights Reserved by <a href="#" class="copyright-link">CodeWithQamar</a>
+        &copy; All Rights Reserved © 2025 <a href="#" class="copyright-link"> VeVisible</a> Developed by <a href="#" class="copyright-link">CodeWithQamar</a>
       </p>
 
     </div>
