--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -93,7 +93,7 @@
     <div class="results-container">
       <div class="result">
        
-        <img src="/assets/images/klap500k.png" alt="Klap July 2024 Results">
+        <img src="/assets/images/progress.png" alt="Klap July 2024 Results">
       </div> 
     </div>
   </section>
