--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -73,7 +73,7 @@
   <div class="results-container">
     <div class="result">
      
-      <img src="/tree/main/assets/images/progress.png" alt="Klap July 2024 Results">
+      <img src="/assets/images/progress.png" alt="Klap July 2024 Results">
     </div> 
   </div>
 </section>
