--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -41,7 +41,7 @@
     <div class="video-container">
       <div class="video-item">
           <video controls autoplay muted loop>
-              <source src="/assets/videos/1.mp4" type="video/mp4">
+              <source src="./assets/videos/1.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video> 
            
