--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -51,14 +51,14 @@
       </div>
       <div class="video-item">
           <video controls autoplay muted loop>
-              <source src="/assets/videos/2.mp4" type="video/mp4">
+              <source src="./assets/videos/2.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
          
       </div>
       <div class="video-item">
           <video controls autoplay muted loop>
-              <source src="/assets/videos/3.mp4" type="video/mp4">
+              <source src="./assets/videos/3.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
          
