--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
               <div class="project-card">
                 <figure class="card-banner img-holder">
                   <video width="510" height="700" autoplay loop muted playsinline>
-                    <source src="/assets/videos/1.mp4" type="video/mp4">
+                    <source src="./assets/videos/1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
                 </figure>
                 <div class="card-content">
                   
                   <p class="card-subtitle">Success Case 01</p>
-                  <h3><a href="#" class="card-title-project">Klap</a></h3>
+                  <h3><a  class="card-title-project">Klap</a></h3>
                   <a href="sucesscase01.html" class="btn btn-primary">View Case</a>
                 </div>
 
@@ -237,7 +237,7 @@
               <div class="project-card">
                 <figure class="card-banner img-holder">
                   <video width="510" height="700" autoplay loop muted playsinline>
-                    <source src="/assets/videos/main2.mp4" type="video/mp4">
+                    <source src="./assets/videos/main2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
                 </figure>
@@ -249,7 +249,7 @@
               <div class="project-card">
                 <figure class="card-banner img-holder">
                   <video width="510" height="700" autoplay loop muted playsinline>
-                    <source src="/assets/videos/main3.mp4" type="video/mp4">
+                    <source src="./assets/videos/main3.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
                 </figure>
