--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
           </p>
           <div class="logos">
             <div class="logos-slide" style="display: flex;">
-              <img src="./logos/3m.svg" />
-              <img src="./logos/barstool-store.svg" />
-              <img src="./logos/budweiser.svg" />
-              <img src="./logos/buzzfeed.svg" />
-              <img src="./logos/forbes.svg" />
-              <img src="./logos/macys.svg" />
-              <img src="./logos/menshealth.svg" />
-              <img src="./logos/mrbeast.svg" />
+              <img src="./logos/1.png" />
+              <img src="./logos/2.png" />
+              <img src="./logos/3.png" />
+              <img src="./logos/4.png" />
+              <img src="./logos/5.png" />
+              <img src="./logos/6.png" />
+              <img src="./logos/7.png" />
+              <img src="./logos/8.png" />
             </div>
           </div>
         </div>
