--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </body>
 
 <h2 class="section__header">
-  <a href="mainsucess.html">
+  <a href="####">
     <button class="btn">See More</button>
   </a>
 </h2>
@@ -276,7 +276,7 @@
 
 
       <h2 class="section__header">
-        <a href="###">
+        <a href="mainsucess.html">
           <button class="btn">See More</button>
         </a>
       </h2>
