--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
               <img src="./logos/6.png" />
               <img src="./logos/7.png" />
               <img src="./logos/8.png" />
+               <img src="./logos/1.png" />
+              <img src="./logos/2.png" />
+              <img src="./logos/3.png" />
+              <img src="./logos/4.png" />
+              <img src="./logos/5.png" />
+              <img src="./logos/6.png" />
+              <img src="./logos/7.png" />
+              <img src="./logos/8.png" />
             </div>
           </div>
         </div>
