--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 </body>
 
 <h2 class="section__header">
-  <a href="####">
+  <a href="services.html">
     <button class="btn">See More</button>
   </a>
 </h2>
