--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="services.css" />
 </head>
 
 <body id="top">
