--- a/services.html
+++ b/services.html
@@ -175,7 +175,19 @@
     </div>
 </body>
 
+ <!-- 
+    - #FOOTER
+  -->
 
+  <footer class="footer">
+    <div class="container">
+
+      <p class="copyright">
+        &copy;All Rights Reserved © 2025 VeVisible Developed By  <a href="#" class="copyright-link"> CodesWithQamar</a>
+      </p>
+
+    </div>
+  </footer>
 
 
   <!-- 
