--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.png" type="image/png+xml">
+  <link rel="shortcut icon" href="./new.png" type="image/png+xml">
 
   <!-- 
     - custom css link
@@ -45,7 +45,30 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">Ve<span>Visible</span></a>
+  
+      <style>
+
+  /* Logo styling */
+  .logo img {
+    height: 50px; /* Adjust as needed */
+}
+img {
+  display: flex;
+  width: 100%;
+}
+
+
+
+      </style>
+
+
+
+
+
+
+      <div class="logo">
+        <img src="./assets/images/logo.png" alt="Company Logo">
+    </div>
 
       <nav class="navbar container" data-navbar>
         <ul class="navbar-list">
