--- a/services.html
+++ b/services.html
@@ -45,7 +45,30 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">Ve<span>Visible</span></a>
+
+      <style>
+
+  /* Logo styling */
+  .logo img {
+    height: 50px; /* Adjust as needed */
+}
+img {
+  display: flex;
+  width: 100%;
+}
+
+
+
+      </style>
+
+
+
+
+
+
+      <div class="logo">
+        <img src="./assets/images/logo.png" alt="Company Logo">
+    </div>
 
       <nav class="navbar container" data-navbar>
         <ul class="navbar-list">
@@ -110,9 +133,9 @@
                  <div class="icon">
                   <img src="./assets/images/1.png" alt="">
                 </div> 
-                 <h2>Social Media Consulting</h2>
+                 <h2>UGC Content</h2>
                  <p>
-                   We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+                  Authentic storytelling through user-visuals that increase engagement and sales.
                  </p>
              </div>
 
@@ -121,9 +144,9 @@
                <div class="icon">
                 <img src="./assets/images/2.png" alt="">
               </div> 
-               <h2>Influencer Marketing</h2>
+               <h2>Influencer Discovery & Outreach</h2>
                <p>
-                 We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+                Identifying and connecting with the right influencers to drive brand success.
                </p>
            </div>
 
@@ -132,11 +155,11 @@
                <div class="icon">
                 <img src="./assets/images/3.png" alt="">
               </div> 
-               <h2>Paid Social Advertising</h2>
-               <p>
-                 We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
-               </p>
-           </div>         
+              <h2>Influencer Managment</h2>
+              <p>
+                Streamlining influencer collaborations to maximize reach, engagement, and brand impact.
+              </p>
+          </div>      
            <div class="content-box">
             <div class="card">
                 <i class="bx bx-bar-chart-alt bx-md"></i>
@@ -145,7 +168,7 @@
                 </div> 
                 <h2>Social Media Consulting</h2>
                 <p>
-                  We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+                  Helping brands navigate social media through data-driven strategic consulting.
                 </p>
             </div>
 
@@ -154,7 +177,7 @@
               <div class="icon">
                 <img src="./assets/images/5.png" alt="">
               </div> 
-              <h2>Influencer Marketing</h2>
+              <h2>Paid Social Advertising</h2>
               <p>
                 We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
               </p>
@@ -165,9 +188,9 @@
               <div class="icon">
                 <img src="./assets/images/6.png" alt="">
               </div> 
-              <h2>Paid Social Advertising</h2>
+              <h2>Social Media Management</h2>
               <p>
-                We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+                Elevating your online presence with expert content curation, scheduling, and engagement.
               </p>
           </div>    
       
@@ -175,7 +198,7 @@
     </div>
 </body>
 
- <!-- 
+  <!-- 
     - #FOOTER
   -->
 
@@ -188,6 +211,9 @@
 
     </div>
   </footer>
+
+
+
 
 
   <!-- 
