--- a/price.html
+++ b/price.html
@@ -45,8 +45,27 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">Ve<span>Visible</span></a>
+       /* Logo styling */
+  .logo img {
+    height: 50px; /* Adjust as needed */
+}
+img {
+  display: flex;
+  width: 100%;
+}
 
+
+
+      </style>
+
+
+
+
+
+
+      <div class="logo">
+        <img src="./assets/images/logo.png" alt="Company Logo">
+    </div>
       <nav class="navbar container" data-navbar>
         <ul class="navbar-list">
 
