--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ img {
                  <div class="icon">
                   <img src="./assets/images/1.png" alt="">
                 </div> 
-                 <h2>Social Media Consulting</h2>
+                 <h2>UGC Content</h2>
                  <p>
-                   We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+                   Authentic storytelling through user-visuals that increase engagement and sales.
                  </p>
              </div>
 
@@ -181,9 +181,9 @@ img {
                <div class="icon">
                 <img src="./assets/images/3.png" alt="">
               </div> 
-               <h2>Influencer Marketing</h2>
+               <h2>Influencer Managment</h2>
                <p>
-                 We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+               Streamlining influencer collaborations to maximize reach, engagement, and brand impact.
                </p>
            </div>
 
@@ -192,9 +192,9 @@ img {
                <div class="icon">
                 <img src="./assets/images/5.png" alt="">
               </div> 
-               <h2>Paid Social Advertising</h2>
+               <h2> Social Media Advertising</h2>
                <p>
-                 We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+              Amplifying your brand’s growth and social footprint via strategic ads placement.
                </p>
            </div>         
         </div>
