--- a/services.html
+++ b/services.html
@@ -177,9 +177,9 @@ img {
               <div class="icon">
                 <img src="./assets/images/5.png" alt="">
               </div> 
-              <h2>Paid Social Advertising</h2>
+              <h2>Social Media Advertising</h2>
               <p>
-                We bring 10+ year of experience, and help brands navigate social media through workshops and strategic consulting.
+               Amplifying your brand’s growth and social footprint via strategic ads placement.
               </p>
           </div>
 
