--- a/price.html
+++ b/price.html
@@ -44,7 +44,7 @@
 
   <header class="header" data-header>
     <div class="container">
-
+<style>
        /* Logo styling */
   .logo img {
     height: 50px; /* Adjust as needed */
