--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./new.png" type="image/png+xml">
+  <link rel="#home" href="./new.png" type="image/png+xml">
 
   <!-- 
     - custom css link
