--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -60,6 +60,9 @@
                         if (url) {
                           window.location.href = url;
                         }
+                         if (url) {
+                          phone.location.href = url;
+                        }
                       });
                     });
                   </script>  
