--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -106,7 +106,7 @@
                 wrapper.addEventListener('click', () => {
                   const url = wrapper.getAttribute('data-link');
                   if (url) {
-                    window.location.href = url;
+                    location.href = url;
                   }
                 });
               });
@@ -142,7 +142,7 @@
                   wrapper.addEventListener('click', () => {
                     const url = wrapper.getAttribute('data-link');
                     if (url) {
-                      window.location.href = url;
+                    location.href = url;
                     }
                   });
                 });
@@ -173,7 +173,7 @@
                   wrapper.addEventListener('click', () => {
                     const url = wrapper.getAttribute('data-link');
                     if (url) {
-                      window.location.href = url;
+                      location.href = url;
                     }
                   });
                 });
