--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -70,7 +70,7 @@
       </div>
       <div class="video-item">
         <div class="video-wrapper" data-link="https://www.instagram.com/p/DCrpdqQg9AD/">
-          <video controls autoplay muted loop>
+          <video autoplay loop muted playsinline>
             <source src="./assets/videos/case2video1.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -95,7 +95,7 @@
       </div>
       <div class="video-item">
         <div class="video-wrapper" data-link="https://www.instagram.com/reel/C9xQRUOShTu/?igsh=MTRqaXNpMGFkbzdndg%3D%3D">
-          <video controls autoplay muted loop>
+          <video autoplay loop muted playsinline>
             <source src="./assets/videos/case2video2.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
