--- a/sucesscase02.html
+++ b/sucesscase02.html
@@ -50,7 +50,7 @@
       <div class="video-container">
         <div class="video-item">
           <div class="video-wrapper" data-link="https://www.instagram.com/reel/DGGfKBnvIU6/">
-            <video controls autoplay muted loop>
+            <video autoplay loop muted playsinline>
               <source src="./assets/videos/case2video1.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -58,7 +58,7 @@
         </div>
         <div class="video-item">
           <div class="video-wrapper" data-link="https://www.instagram.com/reel/C7qqWrQKu7B/">
-            <video controls autoplay muted loop>
+            <video autoplay loop muted playsinline>
               <source src="./assets/videos/case2video2.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -66,7 +66,7 @@
         </div>
         <div class="video-item">
           <div class="video-wrapper" data-link="https://www.tiktok.com/@estherelsewhere/video/7446865895936232746">
-            <video controls autoplay muted loop>
+            <video autoplay loop muted playsinline>
               <source src="./assets/videos/case2video3.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
