--- a/sucesscase03.html
+++ b/sucesscase03.html
@@ -54,7 +54,7 @@
       <div class="video-container">
         <div class="video-item">
           <div class="video-wrapper" data-link="https://www.tiktok.com/@ugcwithemmap/video/7397517324892327200">
-            <video controls autoplay muted loop>
+            <video autoplay loop muted playsinline>
               <source src="./assets/videos/case3video1.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -62,7 +62,7 @@
         </div>
         <div class="video-item">
           <div class="video-wrapper" data-link="https://www.instagram.com/p/DCrpdqQg9AD/">
-            <video controls autoplay muted loop>
+            <video autoplay loop muted playsinline>
               <source src="./assets/videos/case3video2.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -70,7 +70,7 @@
         </div>
         <div class="video-item">
           <div class="video-wrapper" data-link="https://www.instagram.com/reel/C9xQRUOShTu/?igsh=MTRqaXNpMGFkbzdndg%3D%3D">
-            <video controls autoplay muted loop>
+            <video autoplay loop muted playsinline>
               <source src="./assets/videos/case3video3.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
