--- a/sucesscase03.html
+++ b/sucesscase03.html
@@ -53,7 +53,7 @@
       <p>Some content organically outperformed others. Below are a few examples:</p>
       <div class="video-container">
         <div class="video-item">
-          <div class="video-wrapper" data-link="https://www.tiktok.com/@ugcwithemmap/video/7397517324892327200">
+          <div class="video-wrapper" data-link="http://www.tiktok.com/@ugcwithemmap/video/7397517324892327200">
             <video autoplay loop muted playsinline>
               <source src="./assets/videos/case3video1.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="video-item">
-          <div class="video-wrapper" data-link="https://www.instagram.com/p/DCrpdqQg9AD/">
+          <div class="video-wrapper" data-link="http://www.instagram.com/p/DCrpdqQg9AD/">
             <video autoplay loop muted playsinline>
               <source src="./assets/videos/case3video2.mp4" type="video/mp4">
               Your browser does not support the video tag.
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="video-item">
-          <div class="video-wrapper" data-link="https://www.instagram.com/reel/C9xQRUOShTu/?igsh=MTRqaXNpMGFkbzdndg%3D%3D">
+          <div class="video-wrapper" data-link="http://www.instagram.com/reel/C9xQRUOShTu/?igsh=MTRqaXNpMGFkbzdndg%3D%3D">
             <video autoplay loop muted playsinline>
               <source src="./assets/videos/case3video3.mp4" type="video/mp4">
               Your browser does not support the video tag.
