--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -45,7 +45,7 @@
     <div class="video-container">
       <div class="video-item">
         <div class="video-wrapper" data-link="https://www.tiktok.com/@ugcwithemmap/video/7397517324892327200">
-          <video controls autoplay loop muted playsinline>
+          <video  autoplay loop muted playsinline>
             <source src="./assets/videos/1.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
