--- a/sucesscase01.html
+++ b/sucesscase01.html
@@ -57,7 +57,7 @@
               wrapper.addEventListener('click', () => {
                 const url = wrapper.getAttribute('data-link');
                 if (url) {
-                location.href = url;
+                 window.location.href = url;
                 }
               });
             });
@@ -82,7 +82,7 @@
               wrapper.addEventListener('click', () => {
                 const url = wrapper.getAttribute('data-link');
                 if (url) {
-                 location.href = url;
+                  window.location.href = url;
                 }
               });
             });
@@ -108,7 +108,7 @@
               wrapper.addEventListener('click', () => {
                 const url = wrapper.getAttribute('data-link');
                 if (url) {
-                  location.href = url;
+                    window.location.href = url;
                 }
               });
             });
