--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ img {
          
 
           <li>
-            <a href="#contact" class="navbar-link" data-nav-link>Contact </a>
+            <a href="contact.html" class="navbar-link" data-nav-link>Contact </a>
           </li>
 
           
