--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,14 @@ img {
         - #CONTACT
       -->
 
+      
+     <style>
+.section-title{
+  padding: 20px;
+}
+     </style>
+
+      
       <section class="section contact" id="contact" aria-label="contact">
         <div class="container">
 
