--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@ img {
           <h2 class="h2 section-title">Get in Touch With Us</h2>
 
           <p class="section-text">
-             – Let’s make your brand stand out with the right influencers.
+             Let’s make your brand stand out with the right influencers.
           </p>
 
           <form action="" class="contact-form">
