--- a/index.html
+++ b/index.html
@@ -407,66 +407,7 @@ img {
 
           </form>
 
-          <ul class="contact-list">
-
-            <li class="contact-item">
-              <div class="contact-card">
-
-                <div class="card-icon">
-                  <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title">Mail Here</h3>
-
-                  <a href="mailto:hello@luaz.com" class="card-link">hello@luaz.com</a>
-                  <a href="mailto:info@luaz.com" class="card-link">info@luaz.com</a>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="contact-item">
-              <div class="contact-card">
-
-                <div class="card-icon">
-                  <ion-icon name="map-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title">Visit Here</h3>
-
-                  <address class="card-address">
-                    27 Division St, New York,<br>
-                    NY 10002, USA
-                  </address>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="contact-item">
-              <div class="contact-card">
-
-                <div class="card-icon">
-                  <ion-icon name="headset-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div class="card-content">
-
-                  <h3 class="h3 card-title">Call Here</h3>
-
-                  <a href="tel:+1234567890" class="card-link">+123 456 7890</a>
-                  <a href="tel:+2414524526" class="card-link">+241 452 4526</a>
-
-                </div>
-
-              </div>
-            </li>
+          
 
           </ul>
 
@@ -479,20 +420,52 @@ img {
 
 
 
+<!-- 
+- #FOOTER
+-->
 
-  <!-- 
-    - #FOOTER
-  -->
 
-  <footer class="footer">
-    <div class="container">
-
-      <p class="copyright">
-        &copy;All Rights Reserved © 2025 VeVisible Developed By  <a href="#" class="copyright-link"> CodesWithQamar</a>
-      </p>
-
+<footer>
+  <div class="footer-container">
+    <!-- Logo -->
+    <div class="logo">
+      <img src="./assets/images/logo.png" alt="Company Logo">
     </div>
-  </footer>
+
+    <!-- Information Section -->
+    <div class="info-section">
+      <ul class="footer-links">
+        <h3 class="info-title">Information</h3>
+        <li><a href="#">General Terms and Conditions</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div>
+
+    <ul class="footer-links">
+      <h3 class="info-title">Contact Us</h3>
+        <!-- Instagram Mention -->
+        <div class="instagram-mention">
+          <p>Email: <a href="https://www.instagram.com/yourusername" target="_blank">@yourusername</a></p>
+      </div>
+       <!-- Instagram Mention -->
+       <div class="instagram-mention">
+        <p>Instagram: <a href="https://www.instagram.com/vevisible" target="_blank">@VeVisible</a></p>
+    </div>
+     
+    <footer class="footer">
+      <div class="container">
+  
+        <p class="copyright">
+          &copy;All Rights Reserved © 2025 VeVisible Developed By CodesWithQamar <a href="#" class="copyright-link"> </a>
+        </p>
+  
+      </div>
+    </footer>
+   
+    </ul>
+  </div>
+</footer>
 
 
 
