--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ img {
   <div class="footer-container">
     <!-- Logo -->
     <div class="logo">
-      <img src="./assets/images/logo.png" alt="Company Logo">
+      <img src="./favicon.png" alt="Company Logo">
     </div>
 
     <!-- Information Section -->
