--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   /* Logo styling */
   .logo img {
-    height: 45px; /* Adjust as needed */
+    height: 50px; /* Adjust as needed */
 }
 img {
   display: flex;
@@ -419,7 +419,6 @@ img {
 
 
 
-
 <!-- 
 - #FOOTER
 -->
@@ -427,9 +426,23 @@ img {
 
 <footer>
   <div class="footer-container">
-    <!-- Logo -->
-    <div class="logo">
-      <img src="./new.png" alt="Company Logo">
+
+<style>
+
+
+.imgo img {
+  width: 100px; /* Adjust as needed */
+  height: 100px;
+  margin-bottom: 20px; /* Space below the logo */
+}
+
+</style>
+
+
+
+    <!-- imgo -->
+    <div class="imgo">
+      <img src="./favicon.png" alt="Company Logo">
     </div>
 
     <!-- Information Section -->
@@ -446,7 +459,7 @@ img {
       <h3 class="info-title">Contact Us</h3>
         <!-- Instagram Mention -->
         <div class="instagram-mention">
-          <p>Email: <a href="https://www.instagram.com/yourusername" target="_blank">@yourusername</a></p>
+          <p>Email: <a href="mailto:forexample@gmail.com">forexample@gmail.com</a></p>
       </div>
        <!-- Instagram Mention -->
        <div class="instagram-mention">
@@ -466,6 +479,7 @@ img {
     </ul>
   </div>
 </footer>
+
 
 
 
