--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ img {
 
     <!-- imgo -->
     <div class="imgo">
-      <img src="./favicon.png" alt="Company Logo">
+      <img src="./new.png" alt="Company Logo">
     </div>
 
     <!-- Information Section -->
