--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ img {
         <h3 class="info-title">Information</h3>
         <li><a href="#">General Terms and Conditions</a></li>
         <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
       </ul>
     </div>
 
