--- a/privacy.html
+++ b/privacy.html
@@ -153,9 +153,9 @@ img {
         </ul>
     </section>
 
-    <footer>
+    <strong>
         <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:forexample@gmail.com">forexample@gmail.com</a>.</p>
-    </footer>
+    </strong>
 </div>
 </body>
 </html>
