--- a/privacy.html
+++ b/privacy.html
@@ -55,6 +55,7 @@ img {
 
 
       <div class="logo">
+          <a href="#home"> <!-- Link added here -->
         <img src="./assets/images/logo.png" alt="Company Logo">
     </div>
 
