--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ img {
 
 
       <div class="logo">
+        <a href="#home"> <!-- Link added here -->
         <img src="./assets/images/logo.png" alt="Company Logo">
-    </div>
-
+      </div>
       <nav class="navbar container" data-navbar>
         <ul class="navbar-list">
 
