--- a/price.html
+++ b/price.html
@@ -54,7 +54,7 @@ img {
 
 
       <div class="logo">
-        <a href="#home"> <!-- Link added here -->
+        <a href="index.html"> <!-- Link added here -->
         <img src="./assets/images/logo.png" alt="Company Logo">
     </div>
       <nav class="navbar container" data-navbar>
