--- a/services.html
+++ b/services.html
@@ -57,6 +57,7 @@ img {
 
 
       <div class="logo">
+        <a href="index.html"> <!-- Link added here -->
         <img src="./assets/images/logo.png" alt="Company Logo">
     </div>
 
