--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ img {
     <div class="info-section">
       <ul class="footer-links">
         <h3 class="info-title">Information</h3>
-        <li><a href="#">General Terms and Conditions</a></li>
+        <li><a href="terms.html">General Terms and Conditions</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
       </ul>
