--- a/price.html
+++ b/price.html
@@ -169,18 +169,78 @@ img {
 </body>
 
   <!-- 
-    - #FOOTER
+- #FOOTER
+-->
+
+
+<footer>
+  <div class="footer-container">
+
+<style>
+
+
+.imgo img {
+  width: 100px; /* Adjust as needed */
+  height: 100px;
+  margin-bottom: 20px; /* Space below the logo */
+}
+
+</style>
+
+
+
+    <!-- imgo -->
+    <div class="imgo">
+      <img src="./new.png" alt="Company Logo">
+    </div>
+
+    <!-- Information Section -->
+    <div class="info-section">
+      <ul class="footer-links">
+        <h3 class="info-title">Information</h3>
+        <li><a href="#">General Terms and Conditions</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div>
+
+    <ul class="footer-links">
+      <h3 class="info-title">Contact Us</h3>
+        <!-- Instagram Mention -->
+        <div class="instagram-mention">
+          <p>Email: <a href="mailto:forexample@gmail.com">forexample@gmail.com</a></p>
+      </div>
+       <!-- Instagram Mention -->
+       <div class="instagram-mention">
+        <p>Instagram: <a href="https://www.instagram.com/vevisible" target="_blank">@VeVisible</a></p>
+    </div>
+     
+    <footer class="footer">
+      <div class="container">
+  
+        <p class="copyright">
+          &copy;All Rights Reserved © 2025 VeVisible Developed By CodesWithQamar <a href="#" class="copyright-link"> </a>
+        </p>
+  
+      </div>
+    </footer>
+   
+    </ul>
+  </div>
+</footer>
+
+
+
+
+
+
+  <!-- 
+    - #BACK TO TOP
   -->
 
-  <footer class="footer">
-    <div class="container">
-
-      <p class="copyright">
-        &copy;All Rights Reserved © 2025 VeVisible Developed By  <a href="#" class="copyright-link"> CodesWithQamar</a>
-      </p>
-
-    </div>
-  </footer>
+  <a href="#top" aria-label="back to top" data-back-top-btn class="back-top-btn">
+    <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
+  </a>
 
 
 
